--- a/app/views/pages/uikit.html.erb
+++ b/app/views/pages/uikit.html.erb
@@ -19,3 +19,72 @@
 </div>
 
 <hr>
+
+<%# POSTS INDEX %>
+<div class="container zipcode">
+  <%# input from user to get user.zipcode to search with mapbox %>
+  <%#= simple_form_for @user do |f| %>
+  <%#= f.input :zipcode, placeholder: 'Start searching with your zipcode' %>
+  <%#= f.submit %>
+<%# end %>
+</div>
+
+<hr>
+
+<div class="container role-toggle">
+  <%# buttons to switch showing all asker posts on map or show all helper posts on map based on current location%>
+</div>
+
+<hr>
+
+<div class="container navbar">
+  <%# navbar with 4 icons with links to: profile dashboard, posts index, chat index, system settings %>
+  <%# in the middle 1 big round button to add new post %>
+</div>
+
+<hr>
+
+<%# POSTS SHOW %>
+
+<div class="btn-back">
+  <%# button link to posts index %>
+</div>
+
+<hr>
+
+<div class="pfp show">
+  <%# post.user.id profile picture %>
+</div>
+
+<hr>
+
+<div class="container show-intro">
+  <%# h1 greeting, h2 request, h3 location %>
+</div>
+
+<hr>
+
+<div class="container">
+  <div class="post-user-info">
+  <%# h4 "post.user.name's struggle", p "post.user.description" %>
+  </div>
+  <div class="btn-cta">
+    <%# "Help out!" %>
+  </div>
+</div>
+
+<hr>
+
+<div class="container images">
+  <div class="images-header">
+    <%# h4 "attached images", hr %>
+  </div>
+    <%# IF @user.attached-image.attached? %>
+      <%# post.images.forEach do |image| %>
+        <div class="attached-image">
+          <%# cl_image_tag @user.attached-image.key %>
+        </div>
+    <%# ELSE %>
+      <%# "post.user.name chose not to attach any images" %>
+    <%# END %>
+</div>
