Finish placeing geocoder map in the index page

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,12 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+// Define a color scheme for your map
+
+$purple: #C3B6EC;
+$green: #2CAA49;
+$black: #05030C;
+$white: #FFFFFF;
+$light-red: #D5795D;
