--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,53 @@
-<div class="container">
-  <div>
+
+<%= link_to posts_path do %>
+        <div class=“triangle-btn”></div>
+      <% end %>
+
+<hr>
+
+<div class="pfp show">
+  <strong style="color: red;"><img src="path/to/avatar.jpg" alt="Avatar"></strong>
+</div>
+
+<hr>
+
+<hr>
+
+<div class="container show-intro">
     <h1>Hi <%= current_user.name %> <h1>
     <h1> This is <%= @post.user.name %> <h1>
-    <h5><%= welcome_message %></h5>
-    <p>Zipcode: <%= @post.user.zipcode %></p>
-  <div>
-  <div>
-  <p> <strong> <%= @post.user.name %>'s struggle </strong></p>
-  <p> <%= @post.description %> </p>
+    <h2><%= welcome_message %></h2>
+    <h3>Zipcode: <%= @post.user.zipcode %></p>
+</div>
+
+<hr>
 
 
-  <%= link_to button_text, class: "btn btn-primary" %>
-  <div>
+<div class="container">
+  <div class="post-user-info">
+    <h4> <strong> <%= @post.user.name %>'s struggle </strong></h4>
+    <h4> <%= @post.description %> </h4>
+  </div>
+  <div class="btn-cta">
+    <%= link_to button_text %>
+  </div>
+</div>
 
-  <h6>attached images</h6>
-  <hr>
+<hr>
+
+<div class="container images">
+  <div class="images-header">
+    <h4>attached images</h4>
+  </div>
   <% if @post.photos.attached? %>
     <% @post.photos.each do |image| %>
-      <%= image_tag image, class: "img-fluid" %>
+    <div class="attached-image">
+      <%= cl_image_tag image, class: "img-fluid" %>
+    </div>
     <% end %>
   <% else %>
-    <p> <%= @post.user.name %> choose not to attach any image </p>
+    <p> <%= @post.user.name %> choosed not to attach any image </p>
   <% end %>
 </div>
+
+<hr>
