--- a/app/views/pages/uikit.html.erb
+++ b/app/views/pages/uikit.html.erb
@@ -62,7 +62,7 @@
 
 <%# POSTS SHOW %>
 
-<div class="btn-back">
+<div class="triangle-btn">
   <%# button link to posts index %>
 </div>
 
@@ -106,9 +106,3 @@
 </div>
 
 <hr>
-
-<%# POSTS CREATE %>
-
-<div class="container create-post">
-
-</div>
