--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -4,6 +4,9 @@
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
   border-right:10px solid #05030C;
+  position: relative;
+  top: 27px;
+  left: 20px;
 }
 
 .get-started {
@@ -28,4 +31,10 @@
     width: 46px;
     height: 46px;
   }
+}
+
+.create-btn {
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: #D5795D;
 }
