--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,16 +1,20 @@
-<div class="container">
-  <%= link_to posts_path(@posts) do %>
-    <div class="triangle-btn"></div>
-  <% end %>
-  <h1>Create a post</h1>
-  <hr>
-  <%= simple_form_for(@post) do |f| %>
-    <%= f.input :title, placeholder: 'post title', label: false %>
-    <%= f.input :description, placeholder: 'post description... please explain your situation as concise as possible.', label: false %>
-    <%= f.input :category, as: :select, collection: ["gardening", "cooking", "DIY", "cleaning"], placeholder: '#...', label: false %>
-    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+<%= simple_form_for(@post) do |f| %>
+  <div class="container create-post">
+    <div class="form">
+      <%= link_to posts_path(@posts) do %>
+        <div class="triangle-btn"></div>
+      <% end %>
+      <h1>Create a post</h1>
+      <hr>
+      <%= f.input :title, placeholder: 'post title', label: false, class: 'form-skinny' %>
+      <%= f.input :description, placeholder: 'post description... please explain your situation as concise as possible.', label: false %>
+      <%= f.input :category, as: :select, collection: ["gardening", "cooking", "DIY", "cleaning"], placeholder: '#...', label: false %>
+      <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    </div>
+  </div>
+  <div class="container role-selection">
     <p>To make sure you are getting the right experience, please choose from the following:</p>
-    <%= f.collection_radio_buttons :asker, [[true, 'I am asking for help'], [false, 'I am providing help']], :first, :last%>
-    <%= f.submit %>
-  <% end %>
-</div>
+    <%= f.collection_radio_buttons :asker, [[true, 'I am asking for help'], [false, 'I am providing help']], :first, :last %>
+    <%= f.submit class: 'create-btn'%>
+  </div>
+<% end %>
