--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,7 +8,7 @@
       <hr>
       <%= f.input :title, placeholder: 'post title', label: false %>
       <%= f.input :description, placeholder: 'post description... please explain your situation as concise as possible.', label: false %>
-      <%= f.input :category, as: :select, collection: ["gardening", "cooking", "DIY", "cleaning"], placeholder: 'category' %>
+      <%= f.input :category, as: :select, collection: Post::CATEGORIES, prompt: 'please choose a category' %>
       <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     </div>
   </div>
