--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -46,6 +46,7 @@
 
 .container.create-post {
   width: 340px;
+  padding-bottom: 20px;
   min-height: 528px;
   flex-shrink: 0;
   border-radius: 20px;
