--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -5,6 +5,10 @@
   border-radius: 20px;
   background: #F8F7FD;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: 10px;
+  z-index: 999;
+
 }
 
 .container.role-toggle {
