updated the styling

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -37,3 +37,17 @@
   border-radius: 20px;
   background: #D5795D;
 }
+
+.btn-cta {
+  width: 314px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 20px 20px;
+  background: #2CAA49;
+  margin-left: -11px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
