--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -112,3 +112,89 @@
     margin-bottom: 40px;
   }
 }
+
+.container.show{
+  background: #C3B6EC;
+  padding: 15px;
+}
+
+.show-intro{
+  width: 355px;
+  height: 300px;
+  top: 56px;
+  left: 50px;
+  border: 5px black;
+  box-shadow: 15px 0px 10px -10px rgba(0, 0, 0, 0.51);
+  padding-top: 8px;
+  position: relative;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), #F8F7FD;
+  h1,h2,h3{
+    color: #000;
+    text-align: left;
+    font-style: normal;
+    font-weight: 700;
+  }
+  h1 {
+    font-size: 28px;
+    line-height: 40px;
+    margin-left: 50px;
+  }
+  h2 {
+    font-size: 18px;
+    line-height: normal;
+    margin-left: 50px;
+  }
+  h3{
+    font-size: 16px;
+    line-height: 22px;
+    margin-left: 50px;
+  }
+}
+
+.container.user-info{
+  width: 314px;
+  height: 239px;
+  position: relative;
+  flex-shrink: 0;
+  padding-top: 8px;
+  border: 5px black;
+  box-shadow: 15px 0px 10px -10px rgba(0, 0, 0, 0.51);
+  border-radius: 20px;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), #F8F7FD;
+  h1,h2,h3{
+    color: #000;
+    text-align: left;
+    font-style: normal;
+  }
+  h1 {
+    font-size: 28px;
+    line-height: 40px;
+    margin-left: 50px;
+    font-weight: 700;
+  }
+  h2 {
+    font-size: 20px;
+    line-height: 28px;
+    margin-left: 50px;
+    font-weight: 400;
+  }
+  h3{
+    font-size: 16px;
+    line-height: 22px;
+    margin-left: 50px;
+    font-weight: 700;
+  }
+}
+
+.h4-description {
+  font-size: 12px;
+}
+
+.h4-attached{
+  font-size: 20px;
+}
