minimal landing page styling

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -17,7 +17,8 @@
   flex-shrink: 0;
   border-radius: 20px;
   background: #D5795D;
-  p {
+  a {
+    text-decoration: none;
     position: relative;
     top: 22px;
     color: #FFFF;
