--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -1,14 +1,57 @@
-.landing-photos {
-  display: flex;
-  width: 390px;
-  padding: 111px 36px 84px 36px;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 42px;
-
-  .one {
-    width: 159px;
-    height: 148px;
+.home-title {
+  position: relative;
+  padding-top: 15px;
+  h1 {
+    font-weight: bold;
   }
+}
+
+.landing-photos {
+  width: 340px;
+  height: 470px;
+}
+
+.photo.one {
+  width: 159px;
+  height: 148px;
+  flex-shrink: 0;
+  background-image: asset-url('Garden_Person.jpg');
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
+  top: 75px
+}
+
+.photo.two {
+  width: 133px;
+  height: 130px;
+  flex-shrink: 0;
+  background-image: asset-url('Smiling_Woman_Pointing.jpg');
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
+  left: 190px;
+}
+
+.photo.three {
+  width: 90px;
+  height: 90px;
+  flex-shrink: 0;
+  background-image: asset-url('Helping_Hand.jpg');
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
+  left: 30px;
+}
+
+.photo.four {
+  width: 146px;
+  height: 146px;
+  flex-shrink: 0;
+  background-image: asset-url('Kitchen_Couple.jpg');
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
+  left: 160px;
+  bottom: 40px;
 }
