--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,22 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container text-center">
+  <div class="container home-title">
+    <h1>Connecting Hearts, Restoring Lives: <br> Together We Care</h1>
+  </div>
+
+<div class="container landing-photos">
+  <div class="photo one"></div>
+  <div class="photo two"></div>
+  <div class="photo three"></div>
+  <div class="photo four"></div>
+</div>
+
+
+  <div class="container home-button p-5 d-flex justify-content-center">
+    <div class="get-started">
+      <%= link_to "get started", posts_path(@post) %>
+      <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46" fill="none" class="arrow">
+      <path d="M24.8207 29.1334L29.9773 23.2711C30.0535 23.1963 30.0916 23.0982 30.0916 23.0001M24.8207 16.8667L29.9773 22.729C30.0535 22.8039 30.0916 22.902 30.0916 23.0001M30.0916 23.0001L15.7166 23.0001M23 38.3333C14.5316 38.3333 7.66667 31.4684 7.66667 23C7.66667 14.5316 14.5316 7.66666 23 7.66666C31.4684 7.66666 38.3333 14.5316 38.3333 23C38.3333 31.4684 31.4684 38.3333 23 38.3333Z" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+      </svg>
+    </div>
+  </div>
+</div>
