--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,20 +8,20 @@
 
 
 
-  <div class="pfp show">
-    <strong style="color: red;"><img src="path/to/avatar.jpg" alt="Avatar"></strong>
+
+
+
+
+
+<div class="show-intro">
+  <h1>Hi, <%= current_user.name %> </h1>
+  <h1> This is <%= @post.user.name %> </h1>
+  <div id="pfp-show" style="position: relative; display: inline-block;">
+    <img src="path/to/avatar.jpg" alt="Avatar" style="position: absolute; left: 0; top: 50%; transform: translateY(-50%); border-radius: 50%; width: 50px; height: 50px;">
   </div>
-
-
-
-
-
-  <div class="show-intro">
-      <h1>Hi <%= current_user.name %> <h1>
-      <h1> This is <%= @post.user.name %> <h1>
-      <h2><%= welcome_message %> <strong>#<%= @post.category %></strong>  </h2>
-      <h3>Zipcode: <%= @post.user.zipcode %></p>
-  </div>
+  <h2><%= welcome_message %> <strong>#<%= @post.category %></strong>  </h2>
+  <h3>Zipcode: <%= @post.user.zipcode %></h3>
+</div>
 
 
 
