fixed styling landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container text-center">
   <div class="container home-title">
-    <h1>Connecting Hearts, Restoring Lives: <br> Together We Care</h1>
+    <h1 style="margin: 35px">Connecting Hearts, Restoring Lives: <br> Together We Care</h1>
   </div>
 
 <div class="container landing-photos">
