--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -8,7 +8,7 @@
 
 .landing-photos {
   width: 340px;
-  height: 470px;
+  height: 420px;
 }
 
 .photo.one {
@@ -19,7 +19,7 @@
   background-size: cover;
   border-radius: 10px;
   position: relative;
-  top: 75px
+  top: 5px;
 }
 
 .photo.two {
@@ -31,6 +31,7 @@
   border-radius: 10px;
   position: relative;
   left: 190px;
+  bottom: 50px;
 }
 
 .photo.three {
@@ -42,6 +43,7 @@
   border-radius: 10px;
   position: relative;
   left: 30px;
+  bottom: 75px;
 }
 
 .photo.four {
@@ -53,5 +55,5 @@
   border-radius: 10px;
   position: relative;
   left: 160px;
-  bottom: 40px;
+  bottom: 95px;
 }
