--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,7 +32,7 @@
       <h4 class="h4-description"> <%= @post.description %> </h4>
     </div>
     <div class="btn-cta">
-      <%= link_to button_text %>
+      <%= link_to button_text, "#", class:"btn-cta-color"%>
     </div>
   </div>
 
@@ -46,7 +46,7 @@
     <% if @post.photos.attached? %>
       <% @post.photos.each do |image| %>
       <div class="attached-image">
-        <%= cl_image_tag image, class: "img-fluid" %>
+        <%= cl_image_tag image.key, class: "img-fluid" %>
       </div>
       <% end %>
     <% else %>
