--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -60,3 +60,36 @@
   align-items: center;
   text-decoration: none;
 }
+.see-more-btn {
+  width: 139px;
+  height: 42px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: #2CAA49;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+    border: none;
+    background: transparent;
+  }
+  .category-btn {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: transparent;
+    color: black;
+    font-weight: bold;
+    padding: 12px;
+    letter-spacing: .7px;
+    font-size: larger;
+    p {
+      margin: 10px !important;
+    }
+  }
+}
