--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -19,6 +19,9 @@
   justify-content: center;
   align-items: flex-start;
   flex-shrink: 0;
+  position: absolute;
+  top: 75px;
+
   .orange{
     display: flex;
     padding: 8px 37.5px 8px 39px;
@@ -46,7 +49,7 @@
   height: fit-content;
   flex-shrink: 0;
   position: relative;
-  bottom: -10px;
+  bottom: 44px;
   position: absolute;
   z-index: 999;
 }
