--- a/app/views/posts/_info_window.html.erb
+++ b/app/views/posts/_info_window.html.erb
@@ -1,2 +1,13 @@
-<h2 class="popup-text-name"><%= post.user.name %></h2>
-<p class="Popup-text-description"><%= post.title %></p>
+<div class="info-window-container">
+  <div class="info-window-text">
+    <h2 class="popup-text-name"><%= post.user.name %></h2>
+    <p class="Popup-text-description"><%= post.title %></p>
+  </div>
+  <div class="info-window-btn-category d-flex justify-content-between ">
+    <div class="see-more-btn">
+      <%= link_to "See more", post_path(post) %>
+    </div>
+    <div class="category-btn">
+      <p>#<%= post.category %></p>
+  </div>
+</div>
