--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -92,10 +92,10 @@
       margin: 10px !important;
     }
   }
-
-.btn-cta-color{
-  color: white;
-  font-weight: 500;
-  font-size: 25px;
-  text-decoration: none !important;
+  .btn-cta-color{
+    color: white;
+    font-weight: 500;
+    font-size: 25px;
+    text-decoration: none !important;
+  }
 }
