--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -127,6 +127,7 @@
 .container.show{
   background: #C3B6EC;
   padding: 15px;
+  height: 100vh;
 }
 
 .show-intro {
@@ -180,7 +181,7 @@
   left: -26px;
   top: -61px;
   flex-shrink: 0;
-  padding-top: 8px;
+  padding: 20px;
   border: 5px black;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
