--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
   <h1>Hi, <%= current_user.name %> </h1>
   <h1> This is <%= @post.user.name %> </h1>
   <div id="pfp-show" style="position: relative; display: inline-block;">
-    <img src="path/to/avatar.jpg" alt="Avatar" onerror="this.src='app/assets/images/default-avatar.jpg'" style="position: absolute; left: 0; top: 50%; transform: translateY(-50%); border-radius: 50%; width: 50px; height: 50px;">
+    <img src="https://source.unsplash.com/random/500x500/?portrait" alt="Avatar" style="position: absolute; left: 0; margin-left :-10px; margin :-7px; top: 50%; transform: translateY(-50%); border-radius: 50%; width: 50px; height: 50px;">
   </div>
   <h2><%= welcome_message %> <strong>#<%= @post.category %></strong>  </h2>
   <h3>Zipcode: <%= @post.user.zipcode %></h3>
