added color blobs to landingpage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,10 @@
   </div>
 
 <div class="container landing-photos">
+  <div class="black"></div>
+  <div class="purple"></div>
+  <div class="orange"></div>
+  <div class="green"></div>
   <div class="photo one"></div>
   <div class="photo two"></div>
   <div class="photo three"></div>
