fixed class styling bug with orange

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,16 +13,16 @@
   </div>
 
   <div class="container role-toggle">
-    <div id="asker" class="orange">
+    <div id="asker" class="orange-toggle">
       <p id="asker-placeholder">asking for help</p>
     </div>
-    <div id="helper" class="white">
+    <div id="helper" class="white-toggle">
       <p id="helper-placeholder">providing help</p>
     </div>
   </div>
 
   <div class="container navbar ">
-  
+
     <div class="orange-bar">
 
       <div class="green-circle">
