--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -21,8 +21,7 @@
   flex-shrink: 0;
   position: absolute;
   top: 75px;
-
-  .orange{
+  .orange-toggle{
     display: flex;
     padding: 8px 37.5px 8px 39px;
     justify-content: center;
@@ -32,7 +31,7 @@
     border-radius: 8px;
     background: #D5795D;
   }
-  .white{
+  .white-toggle{
     display: flex;
     padding: 8px 39.5px 8px 40px;
     justify-content: center;
