--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   </div>
 
-  <div style="width: 400px; height: 800px;"
+  <div style="width: 100vw; height: 100vh;"
     data-controller="map"
     data-map-markers-value="<%= @markers.to_json %>"
     data-map-center-value="<%= @center.to_json %>"
