fixed index navbar size and positioning at bottom

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -51,7 +51,7 @@
   bottom: 10px;
   position: absolute;
   z-index: 999;
-  margin-bottom: 40px;
+  margin-bottom: auto;
 }
 
 .container.create-post {
