--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
 
   <div class="container role-toggle">
     <div id="asker" class="orange-toggle">
-      <p id="asker-placeholder">asking for help</p>
+      <p id="asker-placeholder">asking help</p>
     </div>
     <div id="helper" class="white-toggle">
       <p id="helper-placeholder">providing help</p>
