--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -68,8 +68,8 @@
 }
 
 .see-more-btn {
-  width: 139px;
-  height: 42px;
+  width: 120px;
+  height: 35px;
   flex-shrink: 0;
   border-radius: 20px;
   background: #2CAA49;
@@ -80,29 +80,35 @@
   text-decoration: none;
   a {
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     text-decoration: none;
     border: none;
     background: transparent;
   }
-  .category-btn {
-    width: 100%;
-    height: 100%;
-    border: none;
-    background: transparent;
-    color: black;
-    font-weight: bold;
-    padding: 12px;
-    letter-spacing: .7px;
-    font-size: larger;
-    p {
-      margin: 10px !important;
-    }
+}
+
+.mapboxgl-popup-close-button {
+
+}
+
+.category-btn {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: transparent;
+  color: black;
+  font-weight: bold;
+  padding: 12px;
+  letter-spacing: .7px;
+  font-size: larger;
+  p {
+    margin: 10px !important;
   }
-  .btn-cta-color{
-    color: white;
-    font-weight: 500;
-    font-size: 25px;
-    text-decoration: none !important;
-  }
+}
+
+.btn-cta-color{
+  color: white;
+  font-weight: 500;
+  font-size: 25px;
+  text-decoration: none !important;
 }
