tweaked show greeting styling

--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -57,3 +57,15 @@
   left: 160px;
   bottom: 95px;
 }
+
+.img-fluid {
+  width: 150px;
+  height: 150px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  object-fit: fill;
+}
+
+.img-flex {
+  display: flex;
+}
