--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -141,7 +141,7 @@
 }
 
 .show-intro {
-  width: 355px;
+  width: 325px;
   height: 300px;
   top: 6px;
   left: 50px;
@@ -150,37 +150,38 @@
   padding-top: 8px;
   position: relative;
   flex-shrink: 0;
-  border-radius: 20px;
+  border-radius: 20px 0px 0px 0px;
   background: linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), #F8F7FD;
   h1, h2, h3 {
     color: #000;
-    text-align: left;
-    font-style: normal;
-    margin-left: 50px;
   }
-  h1 {
-    font-size: 28px;
-    line-height: 40px;
-    font-weight: 700;
+  .greeting {
+    width: fit-content;
+    margin: 15px 0px 0px 90px;
+    h1 {
+      font-size: 28px;
+      font-weight: 700;
+    }
+  }
+  .show-info{
+    width: 248px;
+    margin-left: 90px;
   }
   h2 {
-    font-size: 18px;
+    font-size: 16px;
     line-height: normal;
     font-weight: 400;
-    padding-top: 6px;
   }
   h3 {
     font-size: 16px;
     line-height: 22px;
   }
   #pfp_show {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: -50px;
-    transform: translateY(-50%);
+    img{
+      width: 110px;
+      height: 110px;
+      border-radius: 20px;
+    }
   }
 }
 
