--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,21 @@
 <div class= "container show">
 
   <%= link_to posts_path do %>
-          <div class="triangle-btn"></div>
-        <% end %>
+    <div class="triangle-btn"></div>
+  <% end %>
 
-
-<div class="show-intro">
-  <h1>Hi, <%= current_user.name %> </h1>
-  <h1> This is <%= @post.user.name %> </h1>
-  <div id="pfp-show" style="position: relative; display: inline-block;">
-    <img src="https://source.unsplash.com/random/500x500/?portrait" alt="Avatar" style="position: absolute; left: 0; margin-left :-10px; margin :-7px; top: 50%; transform: translateY(-50%); border-radius: 50%; width: 50px; height: 50px;">
+  <div class="show-intro">
+    <div class="greeting">
+      <h1>Hi, <%= current_user.name %> <br> This is <%= @post.user.name %> </h1>
+    </div>
+    <div id="pfp-show" style="position: relative; display: inline-block;">
+      <img src="https://source.unsplash.com/random/500x500/?portrait" alt="Avatar" style="position: absolute; left: 0; margin-left :-10px; margin :-7px; top: 50%; transform: translateY(-50%); border-radius: 50%; width: 50px; height: 50px;">
+    </div>
+    <div class="show-info">
+      <h2><%= welcome_message %> <strong>#<%= @post.category %></strong>  </h2>
+      <h3>Zipcode: <%= @post.user.zipcode %></h3>
+    </div>
   </div>
-  <h2><%= welcome_message %> <strong>#<%= @post.category %></strong>  </h2>
-  <h3>Zipcode: <%= @post.user.zipcode %></h3>
-</div>
-
-
-
 
   <div class="container user-info">
     <div class="post-user-info">
@@ -28,23 +27,22 @@
     </div>
   </div>
 
-
-
   <div class="container images">
     <div class="images-header">
       <h4 class="h4-attached">attached images</h4>
     </div>
     <hr>
-    <% if @post.photos.attached? %>
-      <% @post.photos.each do |image| %>
-      <div class="attached-image">
-        <%= cl_image_tag image.key, class: "img-fluid" %>
-      </div>
+    <div class="img-flex">
+      <% if @post.photos.attached? %>
+        <% @post.photos.each do |image| %>
+        <div class="attached-image">
+          <%= cl_image_tag image.key, class: "img-fluid" %>
+        </div>
+        <% end %>
+      <% else %>
+        <p> <%= @post.user.name %> choosed not to attach any image </p>
       <% end %>
-    <% else %>
-      <p> <%= @post.user.name %> choosed not to attach any image </p>
-    <% end %>
+    </div>
   </div>
-
 
 </div>
