--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <%= simple_form_for [@chatroom, @message],
-  html: {class: "d-flex"} do |f| %>
+    html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
   <%= f.input :content,
     label: false,
     placeholder: "Message ##{@chatroom.name}",
