--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -215,3 +215,70 @@
   margin-top: -20px;
   font-size: 20px;
 }
+
+.container-dashboard {
+  margin: 10px;
+
+  .dashboard-photo-review {
+    display: flex;
+    justify-content: space-between;
+    .dashboard-photo-left {
+      align-items: left;
+      .photo {
+        width: 150px;
+        height: 150px;
+        border-radius: 5px;
+      }
+    }
+    .dashboard-review-right {
+      text-align: right;
+      h2 {
+        font-size: 25px;
+        font-weight: 600;
+      }
+      h3 {
+        font-size: 20px;
+        font-weight: 500;
+      }
+
+    }
+  }
+  .dashboard-greeting {
+    width: fit-content;
+    h1 {
+      font-size: 35px;
+      font-weight: 700;
+    }
+    h2 {
+      font-size: 25px;
+      font-weight: 600;
+    }
+  }
+  .dashboard-about-me {
+    h2 {
+      margin-top: 20px;
+      font-size: 30px;
+      font-weight: 600;
+    }
+  }
+
+  .dashboard-review {
+    h2 {
+      margin-top: 20px;
+      font-size: 30px;
+      font-weight: 600;
+    }
+  }
+  .review-text-btn {
+    text-decoration: none !important;
+    display: flex;
+    justify-content: space-between;
+    .review-text {
+      width: 300px;
+      height: 100px;
+      border-radius: 5px;
+
+    }
+  }
+
+}
