commit create review page with marked as solved buttons and update posts controller in the index method to keep only the posts not marked as solved in the index

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -26,7 +26,7 @@
         </div>
         <% if current_user == @asker %>
           <div class="review_bottom_checkbox">
-            <%# <%= f.input :mark_as_checked, as: :boolean, label: 'Mark as checked' %>
+            <%= f.input :mark_as_checked, as: :boolean, label: 'Mark as checked'%>
           </div>
         <% end %>
         <%= f.submit class: 'create-btn'%>
