--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
   <%= link_to posts_path do %>
     <div class="triangle-btn"></div>
   <% end %>
- 
+
   <div class="show-intro">
     <div class="greeting">
       <h1>Hi, <%= current_user.name %> <br> This is <%= @post.user.name %> </h1>
@@ -23,7 +23,10 @@
       <h4 class="h4-description"> <%= @post.description %> </h4>
     </div>
     <div class="btn-cta">
-      <%= link_to button_text, "#", class:"btn-cta-color"%>
+      <%# <%= link_to button_text, "#", class:"btn-cta-color"%>
+      <%= simple_form_for @chatroom do |f| %>
+        <%= f.button :button %>
+      <% end %>
     </div>
   </div>
 
