--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,6 +25,13 @@
     <div class="btn-cta">
       <%# <%= link_to button_text, "#", class:"btn-cta-color"%>
       <%= simple_form_for @chatroom do |f| %>
+        <% if @post.asker %>
+          <%= f.input :asker_id, as: :hidden, input_html: { value: @post.user.id} %>
+          <%= f.input :helper_id, as: :hidden, input_html: { value: current_user.id} %>
+        <% else %>
+          <%= f.input :helper_id, as: :hidden, input_html: { value: @post.user.id} %>
+          <%= f.input :asker_id, as: :hidden, input_html: { value: current_user.id} %>
+        <% end %>
         <%= f.button :button %>
       <% end %>
     </div>
