--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,19 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+    <%= f.input :name,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "name" }%>
+    <%= f.input :zipcode,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "zipcode" }%>
+    <%= f.input :about_me,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "about_me" }%>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
