--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,19 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "name" }%>
+    <%= f.input :zipcode,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "zipcode" }%>
+    <%= f.input :about_me,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "about_me" }%>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
