--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,17 +23,22 @@
       <h4 class="h4-description"> <%= @post.description %> </h4>
     </div>
     <div class="btn-cta">
-      <%# <%= link_to button_text, "#", class:"btn-cta-color"%>
-      <%= simple_form_for @chatroom do |f| %>
-        <% if @post.asker %>
-          <%= f.input :asker_id, as: :hidden, input_html: { value: @post.user.id} %>
-          <%= f.input :helper_id, as: :hidden, input_html: { value: current_user.id} %>
-        <% else %>
-          <%= f.input :helper_id, as: :hidden, input_html: { value: @post.user.id} %>
-          <%= f.input :asker_id, as: :hidden, input_html: { value: current_user.id} %>
+
+      <% if @existing_chat %>
+        <%= link_to "chat", chatroom_path(@existing_chat) %>
+      <% else %>
+        <%= simple_form_for @chatroom do |f| %>
+          <% if @post.asker %>
+            <%= f.input :asker_id, as: :hidden, input_html: { value: @post.user.id} %>
+            <%= f.input :helper_id, as: :hidden, input_html: { value: current_user.id} %>
+          <% else %>
+            <%= f.input :helper_id, as: :hidden, input_html: { value: @post.user.id} %>
+            <%= f.input :asker_id, as: :hidden, input_html: { value: current_user.id} %>
+          <% end %>
+          <%= f.button :button %>
         <% end %>
-        <%= f.button :button %>
       <% end %>
+
     </div>
   </div>
 
