add mapstyle to light add coloring to markers and aliign text on popup map window

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -68,6 +68,8 @@
 }
 
 .see-more-btn {
+  margin-top: 20px;
+  margin-left: 0px;
   width: 120px;
   height: 35px;
   flex-shrink: 0;
@@ -87,9 +89,7 @@
   }
 }
 
-.mapboxgl-popup-close-button {
 
-}
 
 .category-btn {
   width: 100%;
