--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -31,7 +31,7 @@
     flex: 1 0 0;
     align-self: stretch;
     border-radius: 8px;
-    background: #D5795D;
+    background: #D2C4FF;
   }
   .white-toggle{
     display: flex;
@@ -40,7 +40,7 @@
     flex: 1 0 0;
     align-self: stretch;
     border-radius: 8px;
-    background: #F8F7FD;
+    background: #94D2FF;
   }
   #helper-placeholder {
     font-size: 15px;
