--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -21,10 +21,11 @@
           <% end  %>
         </div>
 
-        <div class ="review_bottom_reviewee">
-          <%= f.input :user_id, as: :select, collection: @users, prompt: 'Select a user', label: false %>
-        </div>
-
+        <% if @post.user == current_user %>
+          <div class ="review_bottom_reviewee">
+            <%= f.input :user_id, as: :select, collection: @users, prompt: 'Select a user', label: false %>
+          </div>
+        <% end %>
         <div class= "review_bottom_rating">
           <% if current_user == @asker %>
             <%= f.input :asker_rating, as: :select, collection: 1..5, prompt: 'Please choose a rating', label: false %>
