--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -176,7 +176,7 @@
     font-size: 16px;
     line-height: 22px;
   }
-  #pfp_show {
+  .pfp_show {
     img{
       width: 110px;
       height: 110px;
