--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,17 @@
 <div class= "container show">
-
   <%= link_to posts_path do %>
     <div class="triangle-btn"></div>
   <% end %>
-
   <div class="show-intro">
     <div class="greeting">
-    <div class="pfp-show" style="position: relative; display: inline-block;">
-     <% if @post.user.photo.attached? %>
-        <%= cl_image_tag @post.user.photo.key, class: "photo" %>
-      <% else %>
-        <%= image_tag "https://www.creativefabrica.com/wp-content/uploads/2022/12/09/Wicked-Clown-Laughing-Evil-Female-51256887-1-580x580.png", class: "photo" %>
-      <% end %>
-    </div>
-    <h1>This is <%= @post.user.name %> </h1>
+      <div class="pfp-show" style="position: relative; display: inline-block;">
+      <% if @post.user.photo.attached? %>
+          <%= cl_image_tag @post.user.photo.key, class: "photo" %>
+        <% else %>
+          <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png", class: "photo" %>
+        <% end %>
+      </div>
+      <h1>This is <%= @post.user.name %> </h1>
     </div>
     <div class="show-info">
       <h2><%= @post.user.name %> <%= welcome_message %> <strong>#<%= @post.category %></strong></h2>
@@ -27,7 +25,6 @@
       <h4 class="h4-description"> <%= @post.description %></h4>
     </div>
     <div class="btn-cta">
-
       <% if @existing_chat %>
         <%= link_to "chat", chatroom_path(@existing_chat) %>
       <% else %>
@@ -42,26 +39,22 @@
           <%= f.button :button %>
         <% end %>
       <% end %>
-
     </div>
   </div>
 
   <div class="container images">
     <div class="images-header">
-      <h4 class="h4-attached">attached images</h4>
-    </div>
-    <hr>
-    <div class="img-flex">
-      <% if @post.photos.attached? %>
-        <% @post.photos.each do |image| %>
-        <div class="attached-image">
-          <%= cl_image_tag image.key, class: "img-fluid" %>
-        </div>
+      <div class="img-flex">
+        <% if @post.photos.attached? %>
+          <% @post.photos.each do |image| %>
+          <div class="attached-image">
+            <%= cl_image_tag image.key, class: "img-fluid" %>
+          </div>
+          <% end %>
+        <% else %>
+          <p><%= @post.user.name %> choosed not to attach any image</p>
         <% end %>
-      <% else %>
-        <p> <%= @post.user.name %> choosed not to attach any image </p>
-      <% end %>
+      </div>
     </div>
   </div>
-
 </div>
